build: auto-detect filesystem library
Use cmake/code_tests/StdFilesystem_test.cc to properly detect std::filesystem
over std::experimental::filesystem, and if the latter is found, define
SEASTAR_USE_EXPERIMENTAL_FILESYSTEM.

Use that macro definition rather __cpluplus in std-compat.hh

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -703,6 +703,11 @@ if (lz4_HAVE_COMPRESS_DEFAULT)
     PUBLIC SEASTAR_HAVE_LZ4_COMPRESS_DEFAULT)
 endif ()
 
+if (StdFilesystem_USE_EXPERIMENTAL_FILESYSTEM)
+  target_compile_definitions (seastar
+    PUBLIC SEASTAR_USE_EXPERIMENTAL_FILESYSTEM)
+endif ()
+
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   target_compile_definitions (seastar
     PUBLIC
