build: auto-detect filesystem library
Add compilation test to auto-detect which <filesystem> header
should be included.

Look for the standard <filesystem> header file first, then <experimental/filesystem>.

Fail cmake is neither pass the compilation test.

Then, detect the required library using the existing method.

The StdFilesystem_EXPERIMENTAL variable is set only for
the experimental/filesystem case and is tested in CMakeLists.txt
that, in turn, defines SEASTAR_USE_EXPERIMENTAL_FILESYSTEM.

Eventually, std-compat.h includes the right <filesystem> header
based on SEASTAR_USE_EXPERIMENTAL_FILESYSTEM rather than the c++
dialect.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -702,6 +702,11 @@ if (lz4_HAVE_COMPRESS_DEFAULT)
   list (APPEND Seastar_DEVELOPMENT_DEFINES SEASTAR_HAVE_LZ4_COMPRESS_DEFAULT)
 endif ()
 
+if (StdFilesystem_EXPERIMENTAL)
+  target_compile_definitions (seastar
+    PUBLIC SEASTAR_USE_EXPERIMENTAL_FILESYSTEM)
+endif ()
+
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   target_compile_definitions (seastar
     PUBLIC
